V8 @extend y @mixin aplicado a todas las paginas

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                         <li><img src="img/perfumes/imagen_perfume_1.jpg" alt="imagen_prefume"></li>
                                         <li><h3>BOSS</h3></li>
                                         <li><p>Boss Scent For Her EDP 100 ml</p></li>
-                                        <button class="button_recommended">COMPRAR</button>
+                                        <button class="btn_compra">COMPRAR</button>
                                     </ul>
                                 </div>
                             </div>
@@ -174,7 +174,7 @@
                                         <li><img src="img/perfumes/imagen_perfume_13.jpg" alt="imagen_prefume"></li>
                                         <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>Good Girl For Her EDP 100 ml</p></li>
-                                        <button class="button_recommended">COMPRAR</button>
+                                        <button class="btn_compra">COMPRAR</button>
                                     </ul>
                                 </div>
                             </div>
@@ -184,7 +184,7 @@
                                         <li><img src="img/perfumes/imagen_perfume_3.jpg" alt="imagen_prefume"></li>
                                         <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>212 Heroes For Her EDP 100 ml</p></li>
-                                        <button class="button_recommended">COMPRAR</button>
+                                        <button class="btn_compra">COMPRAR</button>
                                     </ul>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                         <li><img src="img/perfumes/imagen_perfume_8.jpg" alt="imagen_prefume"></li>
                                         <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>Bad Boy For Him EDT 100 ml</p></li>
-                                        <button class="button_recommended">COMPRAR</button>
+                                        <button class="btn_compra">COMPRAR</button>
                                     </ul>
                                 </div>
                             </div>
@@ -205,7 +205,7 @@
                                         <li><img src="img/perfumes/imagen_perfume_5.jpg" alt="imagen_prefume"></li>
                                         <li><h3>PACO RABANNE</h3></li>
                                         <li><p>Phantom EDT 10 ml</p></li>
-                                        <button class="button_recommended">COMPRAR</button>
+                                        <button class="btn_compra">COMPRAR</button>
                                     </ul>
                                 </div>
                             </div>
@@ -215,7 +215,7 @@
                                         <li><li><img src="img/perfumes/imagen_perfume_6.jpg" alt="imagen_prefume"></li></li>
                                         <li><h3>CAROLINA HERRERA</h3></li>
                                         <li><p>212 Men EDT 100 ml</p></li>
-                                        <button class="button_recommended">COMPRAR</button>
+                                        <button class="btn_compra">COMPRAR</button>
                                     </ul>
                                 </div>
                             </div>
