V9 Se aplico titulo a cada pagina, faltan las keywords y description

--- a/html/perfumes.html
+++ b/html/perfumes.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Splash&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
-        <title>Perfumeria Beauty</title>
+        <title>Beauty - Perfumes de mujer y hombre</title>
     </head>
 <body>
 
