V10 Cambio de formato de las imagenes a PNG y aplicacion de keywords

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="navbar">
                 <div class="col-sm-12 col-md-12">
                     <ul class="ul_nav_vertical">
-                        <li class="nav_menu"><img src="img/logos_iconos/i" alt="icono_menu">
+                        <li class="nav_menu"><img src="img/logos_iconos/icono_menu.png" alt="icono_menu">
                             <ul class="display_menu">
                                 <li><a href="index.html">INICIO</a></li>
                                 <li><a href="html/perfumes.html">PERFUMES</a></li>
@@ -137,7 +137,7 @@
                     
                 </div>
                 <div class="row">
-                    <div class="col-1 col-sm-1 col-md-1"></div>
+                    <div class="col-md-1"></div>
                     <div class="col-6 col-sm-6 col-md-5">
                         <div class="gallery_main">
                             <a href="html/perfumes.html"><img class="img-fluid" src="img/inicio/oferta_4.png" alt="imagen_perfume"></a>
@@ -145,10 +145,10 @@
                     </div>
                     <div class="col-6 col-sm-6 col-md-5">
                         <div class="gallery_main">
-                            <a href="html/perfumes.html"><img class="img-fluid" src="img/inicio/banner_mercadopago.png" alt="imagen_perfume"></a>
+                            <a href="html/perfumes.html"><img class="img-fluid" src="img/inicio/oferta_7.png" alt="imagen_perfume"></a>
                         </div>
                     </div>
-                    <div class="col-1 col-sm-1 col-md-1"></div>
+                    <div class="col-md-1"></div>
                 </div>
             </section>
 
