V10 Cambio de formato de las imagenes a PNG y aplicacion de keywords

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                     <ul>                        
                                         <li><li><img src="img/unias/gel4.png" alt="imagen_prefume"></li></li>
                                         <li><h3>CHERIMOYA</h3></li>
-                                        <li> <p>Polygel 50 ml</p></li>
+                                        <li> <p>Polygel Cherimoya 50ml</p></li>
                                         <a href="html/unias.html"><button class="btn_compra">¡LO QUIERO!</button></a>
                                     </ul>
                                 </div>
