--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>Perfumeria Beauty</title>
     </head>
 <body>
-    
+    <!-- Layout hecho con sistema de grillas de Bootstrap  -->
     <div class="container-fluid">
         <header class="row" >
             <div class="col-sm-12 col-md-12 p-3">
